--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@ limitations under the License.
 -->
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Accessible Mega Menu</title>
 <script src="//use.edgefonts.net/source-sans-pro.js"></script>
 <script src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 
 <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css/main.css">
-<link rel="stylesheet" type="text/css" href="css/megamenu.css">    
+<link rel="stylesheet" type="text/css" href="css/megamenu.css"> 
 <script src="js/jquery-accessibleMegaMenu.js"></script>
 <script src="js/main.js"></script>
 </head>
