--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ limitations under the License.
 <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <link rel="stylesheet" type="text/css" href="css/megamenu.css"> 
+<link rel="stylesheet" type="text/css" href="css/responsive.css">  
 <script src="js/jquery-accessibleMegaMenu.js"></script>
 <script src="js/main.js"></script>
 </head>
